--- a/templates/index.html
+++ b/templates/index.html
@@ -54,7 +54,7 @@ If you have any feedback please don't hesitate to
 
         <li>
           - <code>[2016-May-03]</code>
-          <a href="https://www.manshar.com/articles/1447/">Grid Status Now: Nine Months Of Data Archives</a>.
+          <a href="https://mos3abof.blogspot.com/2017/11/blog-post.html">Grid Status Now: Nine Months Of Data Archives</a>.
           [Arabic]
         </li>
         <li>
