--- a/templates/article.html
+++ b/templates/article.html
@@ -18,6 +18,8 @@
   {% for tag in article.tags %}
     <meta name="tags" content="{{tag}}" />
   {% endfor %}
+    <link type="text/css" rel="stylesheet" href="{{ SITEURL
+                }}/theme/css/article.css"/>
 
 {% endblock %}
 
