--- a/templates/base.html
+++ b/templates/base.html
@@ -46,6 +46,7 @@
 
     <link rel="shortcut icon" type="image/png" href="{{ SITEURL }}/theme/favicon.ico"/>
 
+
     {% endblock head %}
   </head>
 
@@ -62,7 +63,7 @@
           </li>
 
           <li class="menu">
-            <a href="{{ SITEURL }}/pages/blog.html">Blog</a> /
+            <a href="{{ SITEURL }}/archives.html">Blog</a> /
           </li>
 
           <li class="menu">
@@ -103,10 +104,11 @@
 
         <p>
         <a href="http://www.catb.org/hacker-emblem/"><img src="{{ SITEURL
-                 }}/theme/images/glider.png" alt="hacker emblem"/></a>
+                 }}/theme/images/glider.png" alt="hacker emblem"
+                                            style="display:inline;"/></a>
 
         <a href="https://www.debian.org"><img src="{{ SITEURL
-                 }}/theme/images/debian-logo.png" alt="Debian logo"/></a>
+                 }}/theme/images/debian-logo.png" alt="Debian logo" style="display:inline;"/></a>
         </p>
       </div>
   </body>
