Fixing footer note
Signed-off-by: Mosab Ibrahim <mosab.a.ibrahim@gmail.com>

--- a/templates/base.html
+++ b/templates/base.html
@@ -97,7 +97,10 @@
 
       <div id="footer">
         <hr/>
-        This website is hosted on <a href="https://mbsy.co/BhBvS">Dreamhost</a>.
+        This website uses <a
+          href="https://github.com/getpelican/pelican">pelican</a> with a
+        <a href="https://github.com/mos3abof/mosab-pelican">custom theme</a>,
+        and is hosted on <a href="https://mbsy.co/BhBvS">Dreamhost</a>.
         <br/>
         &copy; 1986 - 2019 (@mos3abof)
         <br/>
