--- a/static/css/article.css
+++ b/static/css/article.css
@@ -139,7 +139,7 @@ li tt {
     display: inline-block;
     white-space: no-wrap;
     background: #fff;
-    font-size: .8em;
+    font-size: 1.1em;
     line-height: 1.5em;
     color: #555;
     border: 1px solid #ddd;
