Modify the footer
Signed-off-by: Mosab Ibrahim <mosab.a.ibrahim@gmail.com>

--- a/templates/base.html
+++ b/templates/base.html
@@ -99,8 +99,7 @@
         <hr/>
         This website uses <a
           href="https://github.com/getpelican/pelican">pelican</a> with a
-        <a href="https://github.com/mos3abof/mosab-pelican">custom theme</a>,
-        and is hosted on <a href="https://mbsy.co/BhBvS">Dreamhost</a>.
+        <a href="https://github.com/mos3abof/mosab-pelican">custom theme</a>.
         <br/>
         &copy; 1986 - 2019 (@mos3abof)
         <br/>
