--- a/templates/base.html
+++ b/templates/base.html
@@ -97,8 +97,8 @@
 
       <div id="footer">
         <hr/>
-        This website uses <a
-          href="https://github.com/getpelican/pelican">pelican</a> with a
+        Powered by <a
+          href="https://github.com/getpelican/pelican">Pelican</a> and my
         <a href="https://github.com/mos3abof/mosab-pelican">custom theme</a>.
         <br/>
         &copy; 1986 - 2019 (@mos3abof)
