Move to Bootstrap and set width for article bodies

--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,7 @@
     <link href="{{ FEED_DOMAIN }}/{% if TAG_FEED_RSS_URL %}{{ TAG_FEED_RSS_URL.format(slug=tag.slug) }}{% else %}{{ TAG_FEED_RSS.format(slug=tag.slug) }}{% endif %}" type="application/rss+xml" rel="alternate" title="{{ SITENAME }} Tags RSS Feed" />
     {% endif %}
 
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link type="text/css" rel="stylesheet" href="{{ SITEURL
                 }}/theme/css/style.css"/>
     {% block meta %}
@@ -40,7 +41,7 @@
           content="A passionate self-taught software engineer, a father to two lovely kids, a husband to an amazing wife, supposedly a geek, a caffeine junkie, a food lover, an open source/free software believer, and in a love/hate relationship with running. Originally from Cairo, Egypt. Currently living in London, United Kingdom."/>
     <meta property="og:image" content="{{ SITE_URL }}/theme/images/bitmoji-mosab.png"/>
     <meta property="fb:app_id" content="153545408690727"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     {% endblock meta %}
 
 
@@ -51,6 +52,7 @@
   </head>
 
   <body>
+    <div class="container-fluid">
     <h1 id="title"><a href="{{ SITEURL }}">{{ SITENAME }}</a></h1>
 
     <div id="subtitle">
@@ -97,8 +99,8 @@
 
       <div id="footer">
         <hr/>
-        Powered by <a
-          href="https://github.com/getpelican/pelican">Pelican</a> and my
+        This website uses <a
+          href="https://github.com/getpelican/pelican">pelican</a> with a
         <a href="https://github.com/mos3abof/mosab-pelican">custom theme</a>.
         <br/>
         &copy; 1986 - 2019 (@mos3abof)
@@ -113,5 +115,11 @@
                  }}/theme/images/debian-logo.png" alt="Debian logo" style="display:inline;"/></a>
         </p>
       </div>
+
+    </div>
+
+      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
 </html>
