--- a/templates/article.html
+++ b/templates/article.html
@@ -4,70 +4,78 @@
 {% block title %}{{ article.title }} | {{ SITENAME }} {% endblock %}
 
 {% block head %}
-  {{ super() }}
+{{ super() }}
 
-  {% import 'translations.html' as translations with context %}
-  {% if translations.entry_hreflang(article) %}
-    {{ translations.entry_hreflang(article) }}
-  {% endif %}
+{% import 'translations.html' as translations with context %}
+{% if translations.entry_hreflang(article) %}
+{{ translations.entry_hreflang(article) }}
+{% endif %}
 
-  {% if article.description %}
-    <meta name="description" content="{{article.description}}" />
-  {% endif %}
+{% if article.description %}
+<meta name="description" content="{{article.description}}" />
+{% endif %}
 
-  {% for tag in article.tags %}
-    <meta name="tags" content="{{tag}}" />
-  {% endfor %}
-    <link type="text/css" rel="stylesheet" href="{{ SITEURL
-                }}/theme/css/article.css"/>
+{% for tag in article.tags %}
+<meta name="tags" content="{{tag}}" />
+{% endfor %}
+<link type="text/css" rel="stylesheet" href="{{ SITEURL
+                           }}/theme/css/article.css"/>
 
 {% endblock %}
 
 {% block content %}
-<section id="content" class="body">
-  <header>
-    <h2 id="post-title">
-      <a href="{{ SITEURL }}/{{ article.url }}" rel="bookmark"
-         title="Permalink to {{ article.title|striptags }}">{{ article.title }}</a></h2>
- {% import 'translations.html' as translations with context %}
- {{ translations.translations_for(article) }}
-  </header>
-  <footer class="post-info">
-    <time class="published" datetime="{{ article.date.isoformat() }}">
-      {{ article.locale_date }}
-    </time>
-    {% if article.modified %}
-    <time class="modified" datetime="{{ article.modified.isoformat() }}">
-      {{ article.locale_modified }}
-    </time>
-    {% endif %}
-    {% if article.authors %}
-    <address class="vcard author">
-      {% for author in article.authors %}
+<div class="row">
+  <div class="col-8">
+    <section id="content" class="body">
+      <header>
+        <h2 id="post-title">
+          <a href="{{ SITEURL }}/{{ article.url }}" rel="bookmark"
+                                                    title="Permalink to {{ article.title|striptags }}">{{ article.title }}</a></h2>
+        {% import 'translations.html' as translations with context %}
+        {{ translations.translations_for(article) }}
+      </header>
+      <footer class="post-info">
+        <time class="published" datetime="{{ article.date.isoformat() }}">
+          {{ article.locale_date }}
+        </time>
+        {% if article.modified %}
+        <time class="modified" datetime="{{ article.modified.isoformat() }}">
+          {{ article.locale_modified }}
+        </time>
+        {% endif %}
+        {% if article.authors %}
+        <address class="vcard author">
+          {% for author in article.authors %}
           <a class="url fn" href="{{ SITEURL }}/{{ author.url }}">{{ author }}</a>
-        {% endfor %}
-    </address>
-    {% endif %}
-  </footer><!-- /.post-info -->
-  <div class="entry-content">
-    {{ article.content }}
-  </div><!-- /.entry-content -->
+          {% endfor %}
+        </address>
+        {% endif %}
+      </footer><!-- /.post-info -->
+      <div class="entry-content">
+        {{ article.content }}
+      </div><!-- /.entry-content -->
+    </section>
+  </div>
 
-  <div>
-    {% if article.category %}
-    <div class="category">
-      <br />
+  <div class="col-1">&nbsp;</div>
+  <div class="col-3">
+
+    <div>
+      {% if article.category %}
+      <div class="category">
+        <br />
         Category: <a href="{{ SITEURL }}/{{ article.category.url }}">{{ article.category }}</a>
-    </div>
-    {% endif %}
-    {% if article.tags %}
-    <div class="tags">
+      </div>
+      {% endif %}
+      {% if article.tags %}
+      <div class="tags">
         Tags:
         {% for tag in article.tags %}
-            <a href="{{ SITEURL }}/{{ tag.url }}">{{ tag }}</a>
+        <a href="{{ SITEURL }}/{{ tag.url }}">{{ tag }}</a>
         {% endfor %}
+      </div>
+      {% endif %}
     </div>
-    {% endif %}
   </div>
-</section>
+</div>
 {% endblock %}
