Modified footer to include twitter link

--- a/templates/base.html
+++ b/templates/base.html
@@ -103,7 +103,7 @@
           href="https://github.com/getpelican/pelican">pelican</a> with a
         <a href="https://github.com/mos3abof/mosab-pelican">custom theme</a>.
         <br/>
-        &copy; 1986 - 2019 (@mos3abof)
+        &copy; 1986 - 2019 (<a href="https://twitter.com/mos3abof">@mos3abof</a>)
         <br/>
 
         <p>
