Updated footer, and formatted base theme

--- a/templates/base.html
+++ b/templates/base.html
@@ -31,12 +31,12 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link type="text/css" rel="stylesheet" href="{{ SITEURL
-                }}/theme/css/style.css"/>
+                         }}/theme/css/style.css"/>
     {% block meta %}
     <meta property="og:title" content="{% if page %}{{ page.title }} | {% endif %}Mosab Ibrahim"/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="{% if page %}{{ page.url }}{% else
-                           %}https://mosab.co.uk{% endif %}"/>
+                                     %}https://mosab.co.uk{% endif %}"/>
     <meta property="og:description"
           content="A passionate self-taught software engineer, a father to two lovely kids, a husband to an amazing wife, supposedly a geek, a caffeine junkie, a food lover, an open source/free software believer, and in a love/hate relationship with running. Originally from Cairo, Egypt. Currently living in London, United Kingdom."/>
     <meta property="og:image" content="{{ SITE_URL }}/theme/images/bitmoji-mosab.png"/>
@@ -53,73 +53,82 @@
 
   <body>
     <div class="container-fluid">
-    <h1 id="title"><a href="{{ SITEURL }}">{{ SITENAME }}</a></h1>
+      <h1 id="title"><a href="{{ SITEURL }}">{{ SITENAME }}</a></h1>
 
-    <div id="subtitle">
-      {{ SITESUBTITLE }}
+      <div id="subtitle">
+        {{ SITESUBTITLE }}
 
-      <div class="menu">
-        <ul class="menu">
-          <li class="menu">
-            <a href="{{ SITEURL }}/">Home</a> /
-          </li>
+        <div class="menu">
+          <ul class="menu">
+            <li class="menu">
+              <a href="{{ SITEURL }}/">Home</a> /
+            </li>
 
-          <li class="menu">
-            <a href="{{ SITEURL }}/archives.html">Blog</a> /
-          </li>
+            <li class="menu">
+              <a href="{{ SITEURL }}/archives.html">Blog</a> /
+            </li>
 
-          <li class="menu">
-            <a href="{{ SITEURL }}/pages/projects.html">Projects</a> /
-          </li>
+            <li class="menu">
+              <a href="{{ SITEURL }}/pages/projects.html">Projects</a> /
+            </li>
 
-          <li class="menu">
-            <a href="{{ SITEURL }}/pages/resume.html">Resume</a> /
-          </li>
-          <li class="menu">
-            <a href="{{ SITEURL }}/pages/about.html">About</a> /
-          </li>
-          <li class="menu">
-            <a href="{{ SITEURL }}/pages/contact.html">Contact</a>
-          </li>
-          {% for p in pages %}
-          <!--<li class="menu{% if p == page %} selected{% endif %}">
-            <a href="{{ SITEURL }}/{{ p.url }}">{{ p.title }}</a>
-            {% if not loop.last %}
-            /
-            {% endif %}
-          </li>-->
-          {% endfor %}
-        </ul>
-      </div>
-    </div>
-
-    <div id="body">
-      {% block content %}
-      {% endblock %}
-
-      <div id="footer">
-        <hr/>
-        This website uses <a
-          href="https://github.com/getpelican/pelican">pelican</a> with a
-        <a href="https://github.com/mos3abof/mosab-pelican">custom theme</a>.
-        <br/>
-        &copy; 1986 - 2019 (<a href="https://twitter.com/mos3abof">@mos3abof</a>)
-        <br/>
-
-        <p>
-        <a href="http://www.catb.org/hacker-emblem/"><img src="{{ SITEURL
-                 }}/theme/images/glider.png" alt="hacker emblem"
-                                            style="display:inline;"/></a>
-
-        <a href="https://www.debian.org"><img src="{{ SITEURL
-                 }}/theme/images/debian-logo.png" alt="Debian logo" style="display:inline;"/></a>
-        </p>
+            <li class="menu">
+              <a href="{{ SITEURL }}/pages/resume.html">Resume</a> /
+            </li>
+            <li class="menu">
+              <a href="{{ SITEURL }}/pages/about.html">About</a> /
+            </li>
+            <li class="menu">
+              <a href="{{ SITEURL }}/pages/contact.html">Contact</a>
+            </li>
+            {% for p in pages %}
+            <!--<li class="menu{% if p == page %} selected{% endif %}">
+              <a href="{{ SITEURL }}/{{ p.url }}">{{ p.title }}</a>
+              {% if not loop.last %}
+              /
+              {% endif %}
+              </li>-->
+              {% endfor %}
+          </ul>
+        </div>
       </div>
 
-    </div>
+      <div id="body">
+        {% block content %}
+        {% endblock %}
+
+        <div id="footer">
+          <hr/>
+          <div class="row">
+            <div class="col-8">
+              This website uses
+              <a href="https://github.com/getpelican/pelican">pelican</a>
+              with a
+              <a href="https://github.com/mos3abof/mosab-pelican">custom theme</a>.
+              <br/>
+              &copy; 1986 - 2019 (<a href="https://twitter.com/mos3abof">@mos3abof</a>)
+              <br/>
+            </div>
+            <div class="col-4" style="text-align:right;">
+
+              <p>
+              <a href="http://www.catb.org/hacker-emblem/">
+                <img src="{{ SITEURL }}/theme/images/glider.png" alt="hacker
+                emblem" title="hacker emblem" style="display:inline;"/>
+              </a>
+
+              <a href="https://www.debian.org">
+                <img src="{{ SITEURL }}/theme/images/debian-logo.png" alt="Debian logo"
+                       title="Debian logo" style="display:inline;"/></a>
+              </p>
+            </div>
+          </div>
+        </div>
+
+      </div>
 
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
 </html>
