Better bootstrap support

--- a/templates/index.html
+++ b/templates/index.html
@@ -32,63 +32,63 @@ If you have any feedback please don't hesitate to
 </p>
 
 {% endblock %}
-      <h2>Recent Articles</h2>
-      <!--<ul>
-        <li>
-          - <code>[2019-Jan-13]</code>
-          <a href="https://medium.com/@mos3abof/2018-state-of-the-union-f71deb220447">2018: State of the Union</a>.
-          [English]
-        </li>
-        <li>
-          - <code>[2016-May-10]</code>
-          <a href="https://medium.com/@mos3abof/how-to-install-firefox-on-debian-jessie-90fa135e9e9">How To Install
-            Firefox on Debian Jessie</a>.
-          [English]
-        </li>
-        <li>
-          - <code>[2016-May-09]</code>
-          <a href="https://medium.com/@mos3abof/new-version-of-power-close-b7b19dd95a1f">New Version of Power
-            Close</a>.
-          [English]
-        </li>
-
-        <li>
-          - <code>[2016-May-03]</code>
-          <a href="https://mos3abof.blogspot.com/2017/11/blog-post.html">Grid Status Now: Nine Months Of Data Archives</a>.
-          [Arabic]
-        </li>
-        <li>
-          - <code>[2014-Oct-10]</code>
-          <a href="https://medium.com/@mos3abof/firefox-power-close-6a621e58180e">Firefox Power Close</a>.
-          [English]
-        </li>
-        <li>
-          - <code>[2013-Jun-17]</code>
-          <a href="https://medium.com/@mos3abof/toggl-target-an-open-source-project-of-my-own-8f3546759992#.l7zkk97q6">Toggl
-            Target : An Open Source Project</a>.
-          [English]
-        </li>
-        <li>
-          - <code>[2006-Sep-12]</code>
-          <a href="https://mos3abof.blogspot.com.eg/2006/09/blog-post_1215.html">Star Wars: Pluto</a>.
-          [Arabic]
-        </li>
-      </ul>-->
-
-<ul>
-  {% for article in articles_page.object_list %}
+<h2>Latest Articles</h2>
+<!--<ul>
   <li>
-    - <code>[{{ article.locale_date }}]</code>
-    <a href="{{ SITEURL }}/{{ article.url }}" rel="bookmark" title="Permalink to {{ article.title|striptags }}">{{ article.title }}</a>.
-    [English]
+  - <code>[2019-Jan-13]</code>
+  <a href="https://medium.com/@mos3abof/2018-state-of-the-union-f71deb220447">2018: State of the Union</a>.
+  [English]
   </li>
-  {% endfor %}
-</ul>
+  <li>
+  - <code>[2016-May-10]</code>
+  <a href="https://medium.com/@mos3abof/how-to-install-firefox-on-debian-jessie-90fa135e9e9">How To Install
+  Firefox on Debian Jessie</a>.
+  [English]
+  </li>
+  <li>
+  - <code>[2016-May-09]</code>
+  <a href="https://medium.com/@mos3abof/new-version-of-power-close-b7b19dd95a1f">New Version of Power
+  Close</a>.
+  [English]
+  </li>
 
-<p>
-<a href="{{ SITEUR }}/archives.html">Read more &raquo;</a>
-</p>
-{% if articles_page.has_other_pages() %}
-{% include 'pagination.html' %}
-{% endif %}
-{% endblock content %}
+  <li>
+  - <code>[2016-May-03]</code>
+  <a href="https://mos3abof.blogspot.com/2017/11/blog-post.html">Grid Status Now: Nine Months Of Data Archives</a>.
+  [Arabic]
+  </li>
+  <li>
+  - <code>[2014-Oct-10]</code>
+  <a href="https://medium.com/@mos3abof/firefox-power-close-6a621e58180e">Firefox Power Close</a>.
+  [English]
+  </li>
+  <li>
+  - <code>[2013-Jun-17]</code>
+  <a href="https://medium.com/@mos3abof/toggl-target-an-open-source-project-of-my-own-8f3546759992#.l7zkk97q6">Toggl
+  Target : An Open Source Project</a>.
+  [English]
+  </li>
+  <li>
+  - <code>[2006-Sep-12]</code>
+  <a href="https://mos3abof.blogspot.com.eg/2006/09/blog-post_1215.html">Star Wars: Pluto</a>.
+  [Arabic]
+  </li>
+  </ul>-->
+
+  <ul>
+    {% for article in articles_page.object_list %}
+    <li>
+      - <code>[{{ article.locale_date }}]</code>
+      <a href="{{ SITEURL }}/{{ article.url }}" rel="bookmark" title="Permalink to {{ article.title|striptags }}">{{ article.title }}</a>.
+      [English]
+    </li>
+    {% endfor %}
+  </ul>
+
+  <p>
+  <a href="{{ SITEUR }}/archives.html">Read more &raquo;</a>
+  </p>
+  {% if articles_page.has_other_pages() %}
+  {% include 'pagination.html' %}
+  {% endif %}
+  {% endblock content %}
