Modify home page for 2020.

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,9 +18,10 @@ living in London, United Kingdom.
 <p>
 You can check <a href="{{ SITEURL }}/pages/resume.html">my resume</a>, jump to the bottom of the
 page to sees some recent blog posts, or go to <a href="blog.html">my blog</a>,
-see what I managed to do <a href="{{ SITEURL }}/pages/2018.html">last
-  year</a>, check my <a href="{{ SITEURL }}/pages/2019.html">2019
-  resolutions</a>, or hang around and check the rest of the links on this
+see what I managed to do in the <a href="{{ SITEURL
+  }}/pages/2018.html">2018</a> &amp; <a href="{{ SITEURL
+  }}/pages/2019.html">2019</a>, and what I plan on doing in  <a href="{{ SITEURL
+  }}/pages/2020.html">2020</a>, or hang around and check the rest of the links on this
 website.
 </p>
 
