--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,22 +1,17 @@
-/*
- * Debian PTS stylesheet.
- * by:
- * - Dan Callahan <dan.callahan@gmail.com>
- * - Enrico Tassi <gareuselesinge@debian.org>
- * - Stefano Zacchiroli <zack@debian.org>
+/**
+ * Page wide settings
  */
 @import url('https://fonts.googleapis.com/css?family=Source+Code+Pro|Cutive+Mono|Roboto|Fira+Mono|Overpass+Mono');
 
-/* --- Whole-Page --- */
 body {
-  margin: 0;
-  padding: 30px;
-  /*font-family: 'Source Sans Pro', sans-serif;*/
-  /*font-family: "DejaVu Sans", "Bitstream Vera Sans", sans-serif; */ /*Prefer Free Fonts*/
   font-family: 'Source Code Pro', 'Overpass Mono', 'Fira Mono', 'Cutive Mono', 'Roboto', monospace;
   color: #000000;
   font-size: 100%;
   background-color: #fff;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  color: #29487d;
 }
 
 a:link {
@@ -46,48 +41,31 @@ a img {
   border: none;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  color: #29487d;
+/**
+ * Header
+ */
+.header > div {
+  margin-top:15px;
+  border-bottom: 2px solid #29487d;
 }
 
-h1#title {
-  margin: 0 0 0 0;
-  /*    padding: 20px 0 0 280px;*/
-  padding: 20px 0 0 20px;
+/**
+ * Site Titles
+ */
+
+h1#site-title {
   font-size: 180%;
   color: #29487d;
-  /*    min-height: 60px;
-  height: auto !important; /* "Min-Height Fast Hack" */
-  /*    height: 60px; */
 }
 
-h1#title a {
+h1#site-title a {
   /*    color: black;*/
   color: #29487d;
   text-decoration: none;
 }
 
-h2#post-title {
-  margin: 0 0 0 0;
-  /*    padding: 20px 0 0 280px;*/
-  padding: 20px 0 20px 0;
-  font-size: 220%;
-  color: #29487d;
-  /*    min-height: 60px;
-  height: auto !important; /* "Min-Height Fast Hack" */
-  /*    height: 60px; */
-}
-
-h2#post-title a {
-  /*    color: black;*/
-  color: #29487d;
-  text-decoration: none;
-}
-
-div#subtitle {
-  margin: -1em 0 1em 0;
+h3#site-subtitle {
   /*padding: 20px 0 0 280px;*/
-  padding: 20px 0 0 20px;
   font-size: 90%;
   /*    min-height: 60px;
   height: auto !important;
@@ -97,8 +75,11 @@ div#subtitle {
 }
 
 
+/**
+ * Site Menu
+ */
 div.menu {
-  margin: 15px 0 0 0;
+  text-align: right;
   font-size:115%;
 }
 
@@ -116,106 +97,62 @@ li.selected a.selected {
   text-decoration: none;
 }
 
-/* --- Content Pane --- */
-div#body {
-  clear: both;
-  /*border-top: 2px solid #d70751;*/
-  border-top: 2px solid #29487d;
-  /*    background: #dfdfdf;*/
-  padding: 1em 1em; /* 0em 0em */
-}
-
-span.indented {
-  padding-left: 1.5em;
-}
-
-#news-list {
-  max-height: 30em;
-  overflow: auto;
-}
-
-/* - Central Table - */
-#problems {
-  background: #0755d7;
-  color: #ffffff;
-}
-
-#todo {
-  background: #0755d7;
-  color: #ffffff;
-}
-
-/* --- Footer --- */
-div#body > hr {
-  display: none;
-}
-
-div.footer {
-  padding: 1em 0;
+/**
+ * Jumbotron
+ */
+.jumbotron {
   background-color: #ffffff;
-  text-align: center;
-  border-top: 2px solid #d70751;
-  margin: 0 0 0 0;
-  border-bottom: 0;
 }
 
-tt {
-  font-family: "DejaVu Sans Mono", "Bitstream Vera Sans Mono", monospace;
+.jumbotron h2 {
+  font-size:2.3rem !important;
 }
 
-a.feedlink { /* Little orange RSS button */
-  background: #ff6600 !important;
-  color: #ffffff !important;
-  border: 1px solid !important;
-  border-color: #ffcc99 #663300 #333300 #ff9966 !important;
-  padding: 0 3px !important;
-  font-weight: bold !important;
-  font-size: 70% !important;
-  text-decoration: none !important;
-  vertical-align: 0.2em !important;
-  /* Without !important, inherets from td.titlecell a:* */
+.jumbotron {
+  padding-top: 1.5rem !important;
+  padding-bottom: 0px !important;
+  margin-bottom: 0px !important;
 }
 
-ul {
+/**
+ * Post Listing
+ */
+.post-listing > ul {
   list-style-type: none;
   padding: 0;
 }
 
-li {
+.post-listing > li {
   margin-top: 0.2em;
 }
 
-/*li { margin-top: 0.4em; }
-td > ul { padding-left: 1em; }
-a.none { color: #000 !important; text-decoration: none !important; }*/
-
-table.arch_qualify {
-  border-collapse: collapse;
+/**
+ * Sidebar
+ */
+.sidebar div {
+  padding: 20px 0 20px 0;
 }
 
-table.arch_qualify td {
-  border: 1px solid black;
-  padding: 0 0.2em 0 0.2em;
+/**
+ * Posts
+ */
+h2#post-title {
+  margin: 0 0 0 0;
+  padding: 20px 0 20px 0;
+  font-size: 2.5rem;
+  color: #29487d;
 }
 
-table.arch_qualify th.criteria {
-  border: 1px solid black;
-  text-align: left;
-  font-weight: normal;
-  padding: 0 0.5em 0 0.5em;
+h2#post-title a {
+  /*    color: black;*/
+  color: #29487d;
+  text-decoration: none;
 }
 
-table.arch_qualify th.arch {
-  border: 1px solid black;
-  text-align: center;
-}
-
-img.float-left {
-  float: left;
-  margin-right: 3px;
-}
-
-img.float-right {
-  float: right;
-  margin-left: 3px;
+/**
+ * Footer
+ */
+footer > div {
+  border-top: 1px solid rgba(0,0,0,.1);
+  padding-top: 20px;
 }
