--- a/templates/article.html
+++ b/templates/article.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+
 {% block html_lang %}{{ article.lang }}{% endblock %}
 
 {% block title %}{{ article.title }} | {{ SITENAME }} {% endblock %}
@@ -8,101 +9,90 @@
 
 {% import 'translations.html' as translations with context %}
 {% if translations.entry_hreflang(article) %}
-{{ translations.entry_hreflang(article) }}
+  {{ translations.entry_hreflang(article) }}
 {% endif %}
 
 {% if article.description %}
-<meta name="description" content="{{article.description}}" />
+  <meta name="description" content="{{article.description}}" />
 {% endif %}
 
 {% for tag in article.tags %}
-<meta name="tags" content="{{tag}}" />
+  <meta name="tags" content="{{tag}}" />
 {% endfor %}
-<link type="text/css" rel="stylesheet" href="{{ SITEURL
-                                      }}/theme/css/article.css"/>
+
+<link
+  type="text/css"
+  rel="stylesheet"
+  href="{{ SITEURL }}/theme/css/article.css" />
 
 {% endblock %}
 
 {% block meta %}
-
-<meta property="og:title" content="{{ article.title }} | Mosab Ibrahim"/>
-    <meta property="og:type" content="type"/>
-    <meta property="og:url" content="{{ article.url }} "/>
-    <meta property="og:description"
-          content="{% if article.description %} {{ article.description }} {%
-                    endif %}"/>
-    <meta property="og:image" content="{{ SITE_URL }}/theme/images/bitmoji-mosab.png"/>
-    <meta property="fb:app_id" content="153545408690727"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta property="og:title" content="{{ article.title }} | Mosab Ibrahim"/>
+  <meta property="og:type" content="type"/>
+  <meta property="og:url" content="{{ article.url }} "/>
+  <meta property="og:description"
+        content="{% if article.description %} {{ article.description }} {%
+                  endif %}"/>
+  <meta property="og:image" content="{{ SITE_URL }}/theme/images/bitmoji-mosab.png"/>
+  <meta property="fb:app_id" content="153545408690727"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 {% endblock %}
 
 {% block content %}
-<div class="row">
-  <div class="col-8">
-    <section id="content" class="body">
-      <header>
-        <h2 id="post-title">
-          <a href="{{ SITEURL }}/{{ article.url }}" rel="bookmark"
-                                                    title="Permalink to {{ article.title|striptags }}">{{ article.title }}</a></h2>
-        {% import 'translations.html' as translations with context %}
-        {{ translations.translations_for(article) }}
-      </header>
-      <footer class="post-info">
-        <time class="published" datetime="{{ article.date.isoformat() }}">
-          {{ article.locale_date }}
-        </time>
-        {% if article.modified %}
-        <time class="modified" datetime="{{ article.modified.isoformat() }}">
-          {{ article.locale_modified }}
-        </time>
-        {% endif %}
-        {% if article.authors %}
-        <address class="vcard author">
-          {% for author in article.authors %}
-          <a class="url fn" href="{{ SITEURL }}/{{ author.url }}">{{ author }}</a>
-          {% endfor %}
-        </address>
-        {% endif %}
-      </footer><!-- /.post-info -->
-      <div class="entry-content">
-        {{ article.content }}
-      </div><!-- /.entry-content -->
-    </section>
-    <div id="disqus_thread"></div>
-    <script>
-      var disqus_config = function () {
-        this.page.url = {{ SITEURL }}/{{ article.url }} ;  // Replace PAGE_URL with your page's canonical URL variable
-      this.page.identifier = {{ SITEURL }}/{{ article.url }}; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-      };
-      (function() { // DON'T EDIT BELOW THIS LINE
-        var d = document, s = d.createElement('script');
-        s.src = 'https://mosab-ibrahim.disqus.com/embed.js';
-        s.setAttribute('data-timestamp', +new Date());
-        (d.head || d.body).appendChild(s);
-      })();
-    </script>
-    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 
-  </div>
+<div class="container">
+  <div class="row">
+    <div class="col-8">
+          <h2 id="post-title">
+            <a href="{{ SITEURL }}/{{ article.url }}"
+               rel="bookmark"
+               title="Permalink to {{ article.title|striptags }}">{{ article.title }}</a>
+          </h2>
 
-  <div class="col-1">&nbsp;</div>
-  <div class="col-3">
+          {% import 'translations.html' as translations with context %}
+          {{ translations.translations_for(article) }}
 
-    <div>
-      {% if article.category %}
-      <div class="category">
+          <time class="published" datetime="{{ article.date.isoformat() }}">
+            {{ article.locale_date }}
+          </time>
+
+          {% if article.modified %}
+          <time class="modified" datetime="{{ article.modified.isoformat() }}">
+            {{ article.locale_modified }}
+          </time>
+          {% endif %}
+
+          {% if article.authors %}
+          <address class="vcard author">
+            {% for author in article.authors %}
+            <a class="url fn" href="{{ SITEURL }}/{{ author.url }}">{{ author }}</a>
+            {% endfor %}
+          </address>
+          {% endif %}
+
+          {{ article.content }}
+
+    </div>
+
+    <div class="col-4">
+      <div class="sidebar">
         <br />
-        Category: <a href="{{ SITEURL }}/{{ article.category.url }}">{{ article.category }}</a>
+        {% if article.category %}
+          <p>
+            Category: <a href="{{ SITEURL }}/{{ article.category.url }}">{{ article.category }}</a>
+          </p>
+        {% endif %}
+
+        {% if article.tags %}
+          <p>
+            Tags:
+            {% for tag in article.tags %}
+            <a href="{{ SITEURL }}/{{ tag.url }}">{{ tag }}</a>
+            {% endfor %}
+          </p>
+        {% endif %}
       </div>
-      {% endif %}
-      {% if article.tags %}
-      <div class="tags">
-        Tags:
-        {% for tag in article.tags %}
-        <a href="{{ SITEURL }}/{{ tag.url }}">{{ tag }}</a>
-        {% endfor %}
-      </div>
-      {% endif %}
     </div>
   </div>
 </div>
