--- a/templates/author.html
+++ b/templates/author.html
@@ -3,6 +3,14 @@
 {% block title %}{{ SITENAME }} - Articles by {{ author }}{% endblock %}
 
 {% block content_title %}
-<h2>Articles by {{ author }}</h2>
+<div class="container">
+  <div class="row">
+    <div class="col-12">
+      <br />
+      <h2>Articles by {{ author }}</h2>
+      <br />
+    </div>
+  </div>
+</div>
 {% endblock %}
 
