--- a/templates/base.html
+++ b/templates/base.html
@@ -53,92 +53,131 @@
 
   <body>
     <div class="container-fluid">
-      <div class="row">
-        <div class="col-4">
-          <h1 id="title"><a href="{{ SITEURL }}">{{ SITENAME }}</a></h1>
 
-          <div id="subtitle">
-            {{ SITESUBTITLE }}
-          </div>
-        </div>
-        <div id="subtitle" class="col-8">
-          <div class="menu align-bottom" style="text-align:right;">
-            <ul class="menu">
-              <li class="menu">
-                <a href="{{ SITEURL }}/">Home</a> /
-              </li>
+    <!-- Header -->
+    <header>
+      <div class="header">
+        <div id="header" class="container">
+          <div class="row">
+            <!-- Site Title -->
+            <div class="col-md-5">
+              <h1 id="site-title"><a href="{{ SITEURL }}">{{ SITENAME }}</a></h1>
+              <h3 id="site-subtitle">
+                {{ SITESUBTITLE }}
+              </h3>
+            </div>
 
-              <li class="menu">
-                <a href="{{ SITEURL }}/archives.html">Blog</a> /
-              </li>
+            <!-- Site Menu -->
+            <div class="col-md-7 menu">
+              <!-- menu displayed on large screen sizes -->
+              <ul class="menu d-none d-md-block">
+                <li class="menu">
+                  <a href="{{ SITEURL }}/">Home</a> /
+                </li>
 
-              <li class="menu">
-                <a href="{{ SITEURL }}/pages/projects.html">Projects</a> /
-              </li>
+                <li class="menu">
+                  <a href="{{ SITEURL }}/archives.html">Blog</a> /
+                </li>
 
-              <li class="menu">
-                <a href="{{ SITEURL }}/pages/resume.html">Resume</a> /
-              </li>
-              <li class="menu">
-                <a href="{{ SITEURL }}/pages/about.html">About</a> /
-              </li>
-              <li class="menu">
-                <a href="{{ SITEURL }}/pages/contact.html">Contact</a>
-              </li>
-              {% for p in pages %}
-              <!--<li class="menu{% if p == page %} selected{% endif %}">
+                <li class="menu">
+                  <a href="{{ SITEURL }}/pages/projects.html">Projects</a> /
+                </li>
+
+                <li class="menu">
+                  <a href="{{ SITEURL }}/pages/resume.html">Resume</a> /
+                </li>
+                <li class="menu">
+                  <a href="{{ SITEURL }}/pages/about.html">About</a> /
+                </li>
+                <li class="menu">
+                  <a href="{{ SITEURL }}/pages/contact.html">Contact</a>
+                </li>
+                {% for p in pages %}
+                <!--<li class="menu{% if p == page %} selected{% endif %}">
                 <a href="{{ SITEURL }}/{{ p.url }}">{{ p.title }}</a>
                 {% if not loop.last %}
                 /
                 {% endif %}
                 </li>-->
                 {% endfor %}
-            </ul>
+              </ul>
+
+              <!-- menu displayed on small screen sizes -->
+              <ul class="menu d-md-none text-center">
+                <li class="menu d-block">
+                  <a href="{{ SITEURL }}/">Home</a>
+                </li>
+
+                <li class="menu d-block">
+                  <a href="{{ SITEURL }}/archives.html">Blog</a>
+                </li>
+
+                <li class="menu d-block">
+                  <a href="{{ SITEURL }}/pages/projects.html">Projects</a>
+                </li>
+
+                <li class="menu d-block">
+                  <a href="{{ SITEURL }}/pages/resume.html">Resume</a>
+                </li>
+                <li class="menu d-block">
+                  <a href="{{ SITEURL }}/pages/about.html">About</a>
+                </li>
+                <li class="menu d-block">
+                  <a href="{{ SITEURL }}/pages/contact.html">Contact</a>
+                </li>
+                {% for p in pages %}
+                <!--<li class="menu d-block{% if p == page %} selected{% endif %}">
+                <a href="{{ SITEURL }}/{{ p.url }}">{{ p.title }}</a>
+                {% if not loop.last %}
+                /
+                {% endif %}
+                </li>-->
+                {% endfor %}
+              </ul>
+            </div>
           </div>
         </div>
       </div>
+    </header>
 
-      <div id="body" class="row">
-        <div class="col-12">
-          {% block content %}
-          {% endblock %}
-        </div>
-      </div>
+    <!-- Content -->
+    <main role="main">
+      {% block content %}
+      {% endblock %}
+    </main>
 
+    <!-- Footer -->
+    <footer class="container">
       <div class="row">
-        <div id="footer" class="col-12">
-          <hr/>
-          <div class="row">
             <div class="col-8">
-              This website uses
-              <a href="https://github.com/getpelican/pelican">pelican</a>
-              with a
-              <a href="https://github.com/mos3abof/mosab-pelican">custom theme</a>.
-              <br/>
-              &copy; 1986 - 2019 (<a href="https://twitter.com/mos3abof">@mos3abof</a>)
-              <br/>
+              © 1986 - 2020
+              |
+              <a href="https://twitter.com/mos3abof"><img
+                                src="{{ SITEURL }}/theme/images/twitter-logo.png"
+                                     style="width:30px;"/>@mos3abof</a>
+              <br>
             </div>
             <div class="col-4" style="text-align:right;">
 
               <p>
-              <a href="http://www.catb.org/hacker-emblem/">
-                <img src="{{ SITEURL }}/theme/images/glider.png" alt="hacker
-                                                                      emblem" title="hacker emblem" style="display:inline;"/>
-              </a>
+              <a href="http://www.catb.org/hacker-emblem/"><img src="{{ SITEURL }}/theme/images/glider.png" alt="hacker
+                                                                      emblem" title="hacker emblem" style="display:inline;"></a>
 
-              <a href="https://www.debian.org">
-                <img src="{{ SITEURL }}/theme/images/debian-logo.png" alt="Debian logo"
-                                                                      title="Debian logo" style="display:inline;"/></a>
+              <a href="https://www.debian.org"><img src="{{ SITEURL }}/theme/images/debian-logo.png" alt="Debian logo" title="Debian logo" style="display:inline;"></a>
               </p>
             </div>
           </div>
-        </div>
+    </footer>
 
-      </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script>window.jQuery || document.write('<script src="./js/vendor/jquery-slim.min.js"><\/script>')</script>
+    <script src="{{ SITEURL }}/theme/js/popper.min.js"></script>
+    <script src="{{ SITEURL }}/theme/js/bootstrap.min.js"></script>
+
   </body>
 </html>
