--- a/templates/categories.html
+++ b/templates/categories.html
@@ -3,10 +3,18 @@
 {% block title %}{{ SITENAME }} - Categories{% endblock %}
 
 {% block content %}
+<div class="container">
+  <div class="row">
+    <div class="col-12">
+      <br />
     <h1>Categories on {{ SITENAME }}</h1>
+    <br />
     <ul>
     {% for category, articles in categories|sort %}
         <li><a href="{{ SITEURL }}/{{ category.url }}">{{ category }}</a> ({{ articles|count }})</li>
     {% endfor %}
     </ul>
+    </div>
+  </div>
+</div>
 {% endblock %}
