--- a/templates/category.html
+++ b/templates/category.html
@@ -3,6 +3,14 @@
 {% block title %}{{ SITENAME }} - {{ category }} category{% endblock %}
 
 {% block content_title %}
-<h2>Articles in the {{ category }} category</h2>
+<div class="container">
+  <div class="row">
+    <div class="col-12">
+      <br />
+        <h2>Articles in the {{ category }} category</h2>
+        <br />
+    </div>
+  </div>
+</div>
 {% endblock %}
 
