--- a/templates/page.html
+++ b/templates/page.html
@@ -13,14 +13,21 @@
 {% endblock %}
 
 {% block content %}
-    {% import 'translations.html' as translations with context %}
-    {{ translations.translations_for(page) }}
+<div class="container">
+  <div class="row">
+    <div class="col-12">
+      <br />
+      {% import 'translations.html' as translations with context %}
+      {{ translations.translations_for(page) }}
 
-    {{ page.content }}
+      {{ page.content }}
 
-    {% if page.modified %}
-        <p>
-        Last updated: {{ page.locale_modified }}
-        </p>
-    {% endif %}
+      {% if page.modified %}
+          <p>
+          Last updated: {{ page.locale_modified }}
+          </p>
+      {% endif %}
+    </div>
+  </div>
+</div>
 {% endblock %}
