--- a/static/css/style.css
+++ b/static/css/style.css
@@ -115,6 +115,18 @@ li.selected a.selected {
 }
 
 /**
+ * Pages
+ */
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+li {
+  margin-top: 0.2em;
+}
+
+/**
  * Post Listing
  */
 .post-listing > ul {
