--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
 
         <p>
           You can check <a href="{{ SITEURL }}/pages/resume.html">my resume</a>, jump to the bottom of the
-          page to sees some recent blog posts, or go to <a href="blog.html">my
+          page to sees some recent blog posts, or go to <a href="{{ SITEURL }}/archives.html">my
           blog</a>, see what I managed to do in the <a href="{{ SITEURL
   }}/pages/2018.html">2018</a> &amp;
           <a href="{{ SITEURL
@@ -76,7 +76,7 @@
       </ul>
 
       <p>
-      <a href="{{ SITEUR }}/archives.html">Read more &raquo;</a>
+      <a href="{{ SITEURL }}/archives.html">Read more &raquo;</a>
       </p>
 
       {% if articles_page.has_other_pages() %}
