--- a/templates/article.html
+++ b/templates/article.html
@@ -43,7 +43,7 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-8">
+    <div class="col-lg-8 order-lg-1">
           <h2 id="post-title">
             <a href="{{ SITEURL }}/{{ article.url }}"
                rel="bookmark"
@@ -75,7 +75,7 @@
 
     </div>
 
-    <div class="col-4">
+    <div class="col-lg-4 order-lg-2">
       <div class="sidebar">
         <br />
         {% if article.category %}
