Updated home page image

--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
         </p>
       </div>
       <div class="col-md-4">
-        <img src="{{ SITE_URL }}/theme/images/mosab-bitmoji.png" />
+        <img src="{{ SITE_URL }}/theme/images/mosab.png" />
       </div>
     </div>
   </div>
