--- a/templates/article.html
+++ b/templates/article.html
@@ -34,7 +34,7 @@
   <meta property="og:description"
         content="{% if article.description %} {{ article.description }} {%
                   endif %}"/>
-  <meta property="og:image" content="{{ SITE_URL }}/theme/images/bitmoji-mosab.png"/>
+  <meta property="og:image" content="{{ SITE_URL }}/theme/images/mosab.png"/>
   <meta property="fb:app_id" content="153545408690727"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 {% endblock %}
