--- a/templates/index.html
+++ b/templates/index.html
@@ -40,6 +40,7 @@
       </div>
       <div class="col-md-4">
         <img src="{{ SITE_URL }}/theme/images/mosab.png" />
+        <p class="text-center font-light" style="font-size:0.75em;">Photo by: Amira Qassim</p>
       </div>
     </div>
   </div>
