--- a/templates/base.html
+++ b/templates/base.html
@@ -38,7 +38,10 @@
     <meta property="og:url" content="{% if page %}{{ page.url }}{% else
                                         %}https://mosab.co.uk{% endif %}"/>
     <meta property="og:description"
-          content="A passionate self-taught software engineer, a father to two lovely kids, a husband to an amazing wife, supposedly a geek, a caffeine junkie, a food lover, an open source/free software believer, and in a love/hate relationship with running. Originally from Cairo, Egypt. Currently living in London, United Kingdom."/>
+          content="A passionate self-taught software engineer, a father to two lovely kids, a
+          husband to an amazing wife, supposedly a geek, a caffeine junkie, a food lover, an open
+          source/free software believer, and in a love/hate relationship with running. Originally
+          from Cairo, Egypt. Currently living in the United Kingdom."/>
     <meta property="og:image" content="{{ SITE_URL }}/theme/images/mosab.png"/>
     <meta property="fb:app_id" content="153545408690727"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
