--- a/templates/index.html
+++ b/templates/index.html
@@ -12,13 +12,11 @@
         <!-- Intro -->
         <h2 class="display-3">Hello, world!</h2>
         <p>
-          I am a passionate self-taught software engineer (and lately site
-          reliability engineer), a father to two lovely kids, a husband to an
-          <a href="https://www.amiraqassim.com/">amazing wife</a>, supposedly
-          a geek, a caffeine junkie, a food lover, an open source/free
-          software believer, and in a love/hate relationship with running.
-          Originally from Cairo, Egypt. Currently living in London, United
-          Kingdom.
+          I am a passionate self-taught software engineer (and lately site reliability engineer), a
+          father to two lovely kids, a husband to an <a href="https://www.amiraqassim.com/">amazing
+          wife</a>, supposedly a geek, a caffeine junkie, a food lover, an open source/free software
+          believer, and in a love/hate relationship with running.  Originally from Cairo, Egypt.
+          Currently living in the United Kingdom.
         </p>
 
         <p>
